--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "^12.1.5",
+    "next": "^12.2.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "smartcontroller": "^3.2.5"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.9.3"
